<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_rgbd_ros2</name>
  <version>1.0.0</version>
  <description>MuJoCo RGBD camera sensor for ROS2 with point cloud and depth image publishing</description>
  <maintainer email="labiybafakh@gmail.com">Muhammad Labiyb Afakh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <!-- System dependencies -->
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libglfw3-dev</build_depend>
  <build_depend>libglew-dev</build_depend>

  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libglfw3-dev</exec_depend>
  <exec_depend>libglew-dev</exec_depend>

  <!-- Launch and visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>